[gd_scene load_steps=5 format=3 uid="uid://nrihmfkuds5b"]

[ext_resource type="Script" uid="uid://c05pq4qrclp3" path="res://Objs/Crate/crate.gd" id="1_drceg"]
[ext_resource type="Texture2D" uid="uid://desc3kvhgymhq" path="res://Arts/Creates.png" id="1_p5cjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drceg"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_drceg"]
radius = 128.0

[node name="Crate" type="Node2D"]
script = ExtResource("1_drceg")
attributes = {
"Flammable": true,
"Pushable": true
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_p5cjc")

[node name="Hitbox" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_drceg")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_drceg")

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_drceg")

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
